--- a/public/css/game.css
+++ b/public/css/game.css
@@ -5,3 +5,24 @@ body, html {
     height: 100%;
     overflow: hidden;
 }
+#login-container {
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+#login {
+    padding: 15px;
+    background-color: #D2B48C;
+    border: 5px solid #DEB887;
+    width: 300px;
+    height: 200px;
+    margin: 30px auto;
+    text-align: center;
+}
+canvas {
+    display: block;
+    margin: 15px auto;
+}
