--- a/public/css/game.css
+++ b/public/css/game.css
@@ -1,9 +1,6 @@
 body, html {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
 }
 #login-container {
     z-index: 1;
@@ -19,7 +16,8 @@ body, html {
     border: 5px solid #DEB887;
     width: 300px;
     height: 200px;
-    margin: 30px auto;
+    margin: 0 auto;
+    margin-top: 30px;
     text-align: center;
 }
 canvas {
