--- a/public/css/game.css
+++ b/public/css/game.css
@@ -1,6 +1,7 @@
 body, html {
     margin: 0;
     padding: 0;
+    font-family: 'Pangolin', Arial;
 }
 #login-container {
     z-index: 1;
@@ -11,13 +12,14 @@ body, html {
     right: 0;
 }
 #login {
-    padding: 15px;
+    padding: 10px;
     background-color: #D2B48C;
-    border: 5px solid #DEB887;
+    border: 5px dotted #DEB887;
+    border-radius: 5px;
     width: 300px;
-    height: 200px;
+    height: 150px;
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 45px;
     text-align: center;
 }
 canvas {
