--- a/public/css/game.css
+++ b/public/css/game.css
@@ -22,6 +22,17 @@ body, html {
     margin-top: 45px;
     text-align: center;
 }
+#login input[type=text] {
+    font-family: inherit;
+    font-size: 14px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+#login button {
+    padding: 5px;
+    font-family: inherit;
+}
 canvas {
     display: block;
     margin: 15px auto;
