--- a/public/css/game.css
+++ b/public/css/game.css
@@ -33,6 +33,10 @@ body, html {
     padding: 5px;
     font-family: inherit;
 }
+#login .error {
+    display: block;
+    margin-bottom: 15px;
+}
 canvas {
     display: block;
     margin: 15px auto;
